<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/touch_selector"
        >

        <include layout="@layout/detail_today_grid"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"/>

        <!--Humidity, Wind and Pressure-->
        <android.support.v7.widget.GridLayout
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/detail_grid_bottom"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:background="@color/detail_accent_pane_background"
            android:paddingBottom="@dimen/abc_action_bar_content_inset_material"
            android:paddingTop="@dimen/abc_action_bar_content_inset_material"
            android:paddingLeft="@dimen/forecast_detail_horizontal_padding"
            android:paddingStart="@dimen/forecast_detail_horizontal_padding"
            android:paddingRight="@dimen/forecast_detail_horizontal_padding"
            android:paddingEnd="@dimen/forecast_detail_horizontal_padding"
            app:columnCount="2">
            <!--Humidity-->
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_columnWeight="1"
                android:id="@+id/humidity_text_view_header"
                android:text="@string/humidity"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
                android:textColor="@color/detail_accent_label"
                android:fontFamily="sans-serif"
                android:gravity="center_vertical"
                app:layout_gravity="fill"
                app:layout_rowWeight="1"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_columnWeight="1"
                android:id="@+id/humidity_text_view"
                android:gravity="center_vertical"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"
                android:textColor="@android:color/white"
                app:layout_gravity="fill"
                tools:text="81%"
                />
            <!--Wind-->
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_columnWeight="1"
                android:id="@+id/wind_text_view_header"
                android:text="@string/wind"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
                android:textColor="@color/detail_accent_label"
                android:fontFamily="sans-serif"
                android:gravity="center_vertical"
                app:layout_gravity="fill"
                app:layout_rowWeight="1"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_columnWeight="1"
                android:id="@+id/wind_text_view"
                android:gravity="center_vertical"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"
                android:textColor="@android:color/white"
                app:layout_gravity="fill"
                tools:text="2km/hr NW"
                />
            <!--Pressure-->
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_columnWeight="1"
                android:id="@+id/pressure_text_view_header"
                android:text="@string/pressure"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
                android:textColor="@color/detail_accent_label"
                android:fontFamily="sans-serif"
                android:gravity="center_vertical"
                app:layout_gravity="fill"
                app:layout_rowWeight="1"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_columnWeight="1"
                android:id="@+id/pressure_text_view"
                android:gravity="center_vertical"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"
                android:textColor="@android:color/white"
                app:layout_gravity="fill"
                tools:text="1017 hpA"
                />

        </android.support.v7.widget.GridLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">



        </LinearLayout>

    </LinearLayout>
</ScrollView>

